--- a/resource/assets/sass/travel/travel.scss
+++ b/resource/assets/sass/travel/travel.scss
@@ -1,27 +1,36 @@
 @import "../include/scafold";
 html,
 body {
-    overflow-x: hidden; /* Prevent scroll on narrow devices */
+    overflow-x: hidden;
     margin:0;
-    pedding:0;
-
+    padding:0;
    }
 .kepala{
+ height:45px;
+ width:100%;
  top:0;
  color:#fff;
- padding:0;
- background:#eaea;
+ padding:0 100px;
+ background:rgba(0,0,0,.750);
+ line-height:35px;
+ 
 }
-nav{
-	position:sticky;
+nav{	
+	top:0;
 	padding:0;
 	width: 100%;
 	height: 80px;
 	box-sizing:border-box;
+	background: transparent;
  }
  nav.black{
- 	background-color:rgba(0,0,0,.23);
- }
+ 	top:0;
+ 	position: fixed;
+ 	background:rgba(0,0,0,.873);
+ 	height:60px;
+ 	box-shadow: 0 4px 9px -2px #e0aaff;
+ 	transition:.5s;
+ 	 }
 nav ul{
 	margin:0;
 	padding:0 100px;
@@ -34,29 +43,90 @@ nav ul li{
 }
 nav ul li a{
 	padding:5px 20px;
-	font-size: .95em;
+	font-size: 1.35em;
 	text-transform: uppercase;	
 	text-decoration:none;
 	line-height: 80px;
 	color:#262626;
 	transition: .5s;
 }
+nav.black ul li a{
+	font-size:.951em;
+	color:#fff;
+	line-height:60px;
+	transition: .5s;
+
+}
 nav ul li a.active,
 nav ul li a:hover{
-	background-color:red;	
-	color:#3f3f45;
+	background-color:rgb(204,33,62);	
+	color:#000;
 	text-decoration:none;
 }
 nav .logo{
 	float:left;
 }
 nav .logo img{
-	height:100px;
+	top:0;
+	height:150px;
 	transition:.5s;
 }
+nav.black .logo img{
+	height:95px;
+	
+}
+ 
+nav .toggle{
+	
+	right:10px;
+	top:26px;
+	background:#f00;
+	color:#fff;
+	padding:5px;
+	cursor:pointer;
+	
+}
+
+@media(max-width: 922px){
+	nav.black{
+		display:none;
+	}
+	nav .logo img{
+		height:65px;
+
+	}
+	
+	nav {
+ 	padding:0 0;
+ 	position: relative;
+ 	background:rgba(0,0,0,.873);
+ 	height:60px;
+ 	transition:.5s;
+ 	 }
+	
+	nav ul{
+		width:100%;
+		top:0;		
+	}
+	nav ul.active{
+		display:block;
+	}
+	nav ul li a{
+		margin:0;
+		display:block;
+		text-align:center;
+		color:#fff;
+		background:blue;
+	}
+
+	
+}
+
 section.sec1{
+	
+	margin-top:-85px;
 	width:100%;
-	height:100vh;
+	height:150vh;
 	background:url(../../image/DJI_00101.jpg);
 	background-size: cover;
 }
@@ -81,5 +151,8 @@ section.isi h1{
 section .isi p{
 	font-size: 20px;
 }
+
+
+
 
 	
