--- a/public/assets/css/dlh.css
+++ b/public/assets/css/dlh.css
@@ -8,11 +8,19 @@ html,body{
 body{
 	font-family: Roboto;
 }
+.carousel{
+	top:0;
+
+}
 .carousel-inner{
-  background-size:cover;
   height: 100%;
-  width: 100%; 
+  width: 100%;   
+}
+.carousel-inner .item img{
   top:0;
+  margin:0;
+  height: 100%;
+  width: 100%;   
 }
 .carousel-indicators{
 	z-index: 1;
@@ -30,11 +38,33 @@ section.kepala{
 	top: 0;
 	background: rgb(17,78,41);
 }
+section.kepala span.title-0{
+	position:absolute;
+	margin:0;
+	padding-top:1vh;
+	padding-left: 4px;
+	background:orange;
+	width:83px;
+}
+section.kepala span.title-0 p{
+	font-weight:500;
+	color:#fff;
+}
+section.kepala span.title-0::after{
+ content: "";
+ position:absolute;
+ top:0;
+ height: 0;
+ width: 0;  
+ right: -34px; 
+ border-top: 42px solid orange;
+ border-right: 35px solid transparent;
+}
 section.kepala .title1{
 	position: relative;
-	float: left;
 	display: inline-block;
 	padding-top: 1vh;
+	padding-left: 20px;
 	padding-bottom: 0;
 	color:#fff;
 }
@@ -52,6 +82,37 @@ section.kepala .title1 a:hover{
 	color: lightblue;
 	transition: 1s;	
 }
+section.tengah{
+	position: relative;
+	background:#006620;
+	padding-top:10px;
+	padding-bottom: 10px;
+	color:#fff;
+
+}
+section.tengah h2.satu{
+	position:absolute;
+	font-size: 2em;
+	text-transform:uppercase;
+	font-weight:600;
+}
+section.tengah h4.dua{
+	margin-top: 50px;
+	font-size: 1.53em;
+	font-weight: 500;
+	text-transform: uppercase;	
+}
+section.tengah .iklan{
+	text-align:right;
+	position:absolute;
+	right: 120px;
+	top:0;	
+}
+section.tengah .iklan img{
+	width:400px;
+	height:100px;	
+}
+
 .ikon ul{
 	list-style: none;	
 }
@@ -96,33 +157,36 @@ section.kepala .title1 a:hover{
 /*nav--*/
 nav{
 	font-family: 'Lato', sans-serif;
-	position: absolute;
+	position: relative;
 	width: 100%;
 	margin-top: 0;	
 	transition:all 1s ease;
 	z-index: 2;
+	margin-bottom:10px;
 }
 nav .logo{
-	position: fixed;
+	position: absolute;
 	float: left;
-	margin: 0 0;
+	margin-top:-80px;
+	margin-bottom: 0;
 	transition: .5s;
 	
 }
 nav.black .logo{
+	margin:0 0;
 	float: left;
 	transition: .5s;
 	
 }
 nav .logo img{
-	width: 150px;
-	height: 150px;
+	width: 100px;
+	height: 110px;
 	transition: .5s;
 }
 nav.black .logo img{
-	top:0;
-	width: 85px;
-	height: 85px;
+	margin-top:10px;
+	width: 95px;
+	height: 105px;
 	-webkit-filter: drop-shadow(2px 3px 3px #fff );
     filter: drop-shadow(2px 3px 3px #fff);
     transition: .5s;
@@ -148,6 +212,7 @@ nav.black ul{
   background: rgb(6,30,16);
   padding:0;  
   transition: .51s;  
+  
 }
 
 nav ul li{
@@ -196,7 +261,7 @@ li.sub::after{
   font-family: FontAwesome;
   content: "\f107";
   font-size: 20px;
-  color:#e2e2;
+  color:#fff;
 }
 
 nav.black ul li.sub::after{
@@ -220,15 +285,15 @@ li.sub ul li:hover{
 }
 
 li.sub:hover ul {
-    top:50%;
-	width: auto;
+    width: auto;
 	display: block;
 	background: rgba(0,0,0,0.865);
 }
 
 nav.black li.sub:hover ul {
-    top:70px;
-}
+    top:50px;
+    width:auto;
+    }
 li.sub:hover ul li {
     display: block;    
 	text-align:left;
@@ -243,43 +308,77 @@ li.sub:hover ul li a:hover{
     color:#fff;
     
 }
-
 div.slide{
-	margin-top:30px;
+	margin-top:10px;
 	margin-right:0;
 	bottom:0;
 	float: left;
 	
 }
 div.slide img{
-	margin-top:30px;
 	height: auto;
 	width: 100%;
 }
-div.artikel{    
-    margin-top:60px;
-   	float:left;
-	margin-left:0;
-	}
-div.artikel .media{
-	padding:0 1px;
-	margin-left:-20px;
+div.artikel{  
+	top:0;
+	float: left;
+	padding-left: 10px;
 	
+    }
+div.artikel span.judul{
+	position:relative;	
+	}	
+div.artikel span.judul p{
+    background: #008769;
+	padding: 0 5px; 
+	color:#fff;
+	font-weight:100;
+	border-right:1px solid orange;
+	margin-bottom: 10px;
 }
+div.artikel .media{
+	top:0;
+	}
 div.artikel .media .media-body{
-    padding-bottom: 12px;
+	padding-bottom: 5px;
 	border-bottom:1px solid #008676;
 }
 div.kadin{		
-	margin-top:30px;
-	float:right;
-	text-align: justify;
-	right:0;
-	height: auto;
+	top:0;
+	float: right;
+	margin-left:10px;
 }
-div.kadin img{
-	padding-top:30px;
-	text-align: left;
+div.kadin span.judul{
+	position:relative;
+	left: 0;		
+}
+div.kadin span.judul p{
+    background: #008769;
+	padding: 0 5px; 
+	color:#fff;
+	font-weight:100;
+	border-right:2px solid orange;
+}	
+
+div.kadin p{   
+   color:#fff;
+	
+}
+div.kadin p.unduh{
+    width: 100%;
+	left: 0;
+	font-size:14px;
+	padding:2px 5px;
+	background: #008678;
+}
+div.kadin p.unduh:hover{
+ -ms-transform:skewX(-13deg);
+ -webkit-transform:skewX(-13deg);
+ transform:skewX(-13deg);
+}
+
+section.isi{
+	position:relative;
 }
 img .text{
 	position: relative;
@@ -291,9 +390,14 @@ img .text{
     padding-right:0;
     padding-left:0;
     padding-top: 0;
+    margin-bottom:10px;
 }
-.wrape{
+.wrape{	
 	margin-top:20px;
+
+}
+.wrape #mutiara{
+	position:relative;
 }
 .wrape #mutiara h3 {
 	margin-top: 20px;
@@ -331,26 +435,26 @@ img .text{
 	background: rgba(255,255,255,.85);
 }
 /*ol-list*/
+div.list1{
+	padding-top: 10px;
+	margin-bottom: 25px;
+}
 
 ol.simple-list {
+	
+	position:relative;
 	width: 100%;
     list-style-type: none;
     list-style-type: decimal;      
-    margin: 0;
-    margin-left:2em;
+    margin-top: 20px;
+    margin-left:0;
     padding-left: 20px;     
     counter-reset: li-counter;
 }
-ol.simple-list > li{
-    position: relative;
-    margin-bottom: 10px;
-    padding-left: 1em;    
-    }
-
 ol.simple-list > li:before {
+
     font-family: 'Roboto', sans-serif;
-    position: absolute;
-    top: 0;
+    position:absolute;
     left: -1em;
     width: 1.2em;  
     height:1.2em;  
@@ -360,17 +464,24 @@ ol.simple-list > li:before {
     font-weight: 100;
     text-align: center;
     color: #fff;    
-    background:#008786;
+    background:#006e44;
     border-radius: 50%;    
     content: counter(li-counter);
     counter-increment: li-counter;
 }
+ol.simple-list > li{
+    position: relative;
+    margin-bottom: 10px;
+    padding-left: 1em;    
+    }
+
+
 ol.simple-list > li p{
 	font-size: 17px;
 	padding-left:1px;
 	line-height: 17px;
 	padding-bottom: 12px;
-	border-bottom: 1px solid grey;	
+	border-bottom: 1px solid #008786;	
 	transition: all .3s ease-in-out;
 }	
 ol.simple-list > li p:hover{	
@@ -389,6 +500,116 @@ ol.simple-list > li p a:hover{
     transition: all .5s ease;
 }
 
+/*kanan*/
+section.kanan{
+	float:right;
+	right: 0;
+}
+section.kanan div.judul{	
+	
+	
+	width: 100%;
+	font-family: "Roboto";
+	top:0;
+	left:0;
+	text-align:left;
+	font-size: 1.52em;
+	text-align: right;
+	font-weight: 100;
+	color:#006666;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+	border-bottom: 1px solid orange;
+}
+section.kanan div.judul .tt{
+	font-size:1.52em;
+	float: left;
+	left: 0;
+	color:#1da1f2;
+	border-radius:50%;
+	padding:0 5px 0 ;
+	border:1px solid grey;
+	background:black;
+}
+section.kanan div.judul span.ar{
+	font-size:1.52em;
+	float: left;
+	left: 0;
+	top:0;
+	color:lightblue;
+	border-radius:50%;
+	padding:0 5px 0 ;
+	border:1px solid grey;
+	background:black;
+}
+section.kanan div.judul::after{	
+	content: "";
+	display: inline-block;
+    vertical-align: middle;
+    height: 3vh;
+    margin-left: 4px;
+    background-color: #006666;
+    box-sizing: border-box;
+    width: 35%;
+    -ms-transform: skewX(-25deg); /* IE 9 */
+    -webkit-transform: skewX(-25deg); /* Safari */
+    transform: skewX(-25deg); /* Standard syntax */
+    border-top: 2px solid orange;
+  }
+    
+section.kanan p{
+	padding-left:20px;
+	
+}
+
+/*ribobon*/
+
+.ribbon{
+	position: absolute;
+    opacity: .97;
+    transition-delay: .5s ease-in-out;
+}
+.ribbon-1{
+	width: 85%;
+	height: 50px;
+	background: rgba(0,0,0,.8);
+	bottom:2vh;
+	left: 0;
+	z-index: 1;
+	box-shadow: 0 3px 6px  grey;
+	border-left:2px solid orange;
+}
+.ribbon-1 .judul{
+	color:#fff;
+	padding-left: 3px;
+}
+h4.terkait{
+	top:0;
+	text-align: center;
+	display: inline-block;
+	height:1em;		
+	padding:0 6px;
+	margin-bottom:10px;
+
+}
+h4.terkait:hover{
+  -ms-transform:skewX(-20deg);
+  -webkit-transform:skewX(-20deg);
+  transform:skewX(-20deg);
+
+}
+h4.terkait p{
+	padding:5px 5px;
+	background:#008678;
+	color:#fff;
+	font-size:1em;
+	font-weight:100;
+	border-right: 1px solid orange;
+	border-left: 1px solid orange;
+	box-shadow:5px 4px 3px#02245b;
+	
+}
+
 #footer{
 	bottom:0;
 	margin: 0;
@@ -397,10 +618,57 @@ ol.simple-list > li p a:hover{
 	width: 100%;
 	min-height:102px;
 	border-bottom: 1px solid #262728;
+	margin-top: 10px;
 }
+/*Galeri*/
+.item {
+  position: inherit;
+  margin: 0;
+  overflow: hidden;
+  
+}
+.item img {
+  display: block;
+   max-width: 100%;  
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+span.overlay {
+  position: absolute;
+  bottom:0;
+  left: 0;
+  margin-bottom: 3px;
+  padding-top:5px;
+  padding-left: 10px;
+  padding-right:10px;
+  background-color: rgba(0,0,0,.85);
+  border-right: 2px solid orange;
+  width: 95%;
+}
+span.overlay p a{
+ color: #086969;
+ font-style: 14px;
+ line-height: 16px;
+ font-weight: 100;
+ text-decoration: none;
+ transition: all .5s ease-in-out;
+}
+span.overlay p a:hover{
+ color:#fff;
+ transition: all .5s ease-in-out; 
+ } 
+ .item:hover img {
+  -moz-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+
 /*footer*/
 #footer>.isikaki{
 	padding-top: 15px;
+
 }
 #footer>.isikaki p a{
 	float: left;
@@ -429,13 +697,28 @@ ol.simple-list > li p a:hover{
 {
 	nav .logo{
 		position: fixed;
-		top:0;
-		transition: .5s;		
+		margin-right: 10px;
+		transition: .5s;	
+		float: right;	
 	}
 	nav .logo img{
+		margin-right: 0;
 		width: 95px;
 		height: 95px;
 		transition: .5s;
+		
+	}
+	nav.black .logo{
+	top:0;
+	margin:0 0;
+	float: left;
+	transition: .5s;
+	
+}
+	nav.black .logo img{
+		top:0;
+		width:80px;
+		height: 90px;
 	}
 	nav ul{
 		max-height:0;
@@ -476,7 +759,7 @@ ol.simple-list > li p a:hover{
   	width: 100%;
   	height: auto;
   }
-  section.isi .judul{
+    section.isi .judul{
   	font-size: 1.32em;
   }
   section.kepala .title1{
@@ -487,28 +770,63 @@ ol.simple-list > li p a:hover{
  section.kepala span.jadwal{
  	display:none;
  }
+ section.tengah .iklan{
+	float: right;
+	right:0;
+	transition:all .5s ease-in-out;	
+}
   p{
 	font-size: 16px;
 	transition: all .3s ease-in-out;
-  }
-  
+  }  
 .wrape #mutiara{
-    display: block;
-    padding: 5px 10px;
-    	
+    display: inline-block;
+    padding: 5px 10px;    	
+}
+.no-gutter > [class*='col-'] {
+   margin-bottom:0;
 }
 }
-
 @media(max-width: 722px)
-{
+{ 	
+ 	section.tengah h2.satu{
+	position:absolute;
+	font-size: 1.5em;
+	text-transform:uppercase;
+	font-weight:500;
+	transition:all .5s;
+}
+section.tengah h4.dua{
+	margin-top: 50px;
+	font-size: 1em;
+	font-weight: 400;
+	text-transform: uppercase;
+	transition:all .5s;	
+} 
 	section.kepala .title1{
 	left:3px;
 	bottom:0;
 	transition: all .5s ease;
 }
+ section.kepala span.title-0{
+ 	display:none;
+ }
+ section.tengah h2.satu{
+	position:absolute;
+	float:right;
+}
+section.tengah h4.dua{
+	text-align: center;
+}
+section.tengah .iklan{
+	display:none;
+  }
    div.artikel{
-   	margin:15px 20px;
+   	margin:10px 0;
+   	padding:0;
+   	margin-bottom: 10px;
    }
+
 	section.isi .judul{
 		font-size: 1em;
 	}
@@ -521,7 +839,7 @@ ol.simple-list > li p a:hover{
 	}
 	.wrape{
 		width: 100%;
-		background: #008769;
+		
 	}
 	.wrape #mutiara{
 		margin-top: 5px;
@@ -532,4 +850,8 @@ ol.simple-list > li p a:hover{
 	line-height: 16px;
 	
 	}
+	.no-gutter > [class*='col-'] {
+     margin-bottom:0;
+}
+
 }
